--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  padding-top: 60px;
   margin-bottom: 30px;
   align-items: center;
 }
