--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,12 +1,19 @@
 .status-bar {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
-  opacity: 0.7;
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  padding: 10px 0px;
 }
 
 .status-bar i {
   font-size: 14px;
+}
+
+.status-bar .status-bar__column {
+  background-color: white;
 }
 
 .status-bar .status-bar__battery-level {
