--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,30 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300:400,600&display=swap");
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
+@import "nav-bar.css";
+@import "friend.css";
+@import "friends.css";
+@import "find.css";
+@import "more.css";
+@import "settings.css";
+@import "chat.css";
+
+* {
+  box-sizing: border-box; /* 이렇게 설정해둬야 박스 패딩 주기가 편함! */
+}
 
 body {
   background-color: white;
-  padding: 10px 20px;
+  padding-right: 20px;
+  padding-left: 20px;
   color: #020202;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  height: 1000000px;
 }
 
 a {
   color: inherit; /* gets color from the father element */
+  text-decoration: none;
 }
