--- a/css/chat.css
+++ b/css/chat.css
@@ -127,7 +127,9 @@
 .message {
   display: flex;
   align-items: flex-start;
+  justify-content: space-between;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .incoming-message {
@@ -151,7 +153,7 @@
   width: 30px;
   border-radius: 15px;
   margin-right: 15px;
-  animation: spin 1s linear infinite;
+  animation: spin 1.5s linear infinite;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
@@ -169,7 +171,7 @@
 }
 
 .incoming-message .message__author {
-  margin-top: 10px;
+  margin-bottom: 5px;
   display: block;
   font-weight: 600;
   font-size: 12px;
@@ -183,6 +185,18 @@
 .sent-message .message__bubble {
   background-image: linear-gradient(to right, #fc466b, #3f5efb);
   border-bottom-right-radius: 0px;
+}
+
+.incoming-message .message__timestamp {
+  font-size: 12px;
+  margin: 35px 0 0 8px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.sent-message .message__timestamp {
+  font-size: 12px;
+  margin: 20px 8px 0px 0;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 @keyframes incomingAnimation {
